<?xml version="1.0" encoding="utf-8"?>
		<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/scroll"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" android:fillViewport="true" android:layout_margin="20dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2sd"/>

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#666666" android:layout_marginBottom="10dp" android:layout_marginTop="10dp" android:contentDescription="@string/separator"/>

            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ad2sd"/>

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#666666" android:layout_marginBottom="10dp" android:layout_marginTop="10dp" android:contentDescription="@string/separator"/>

            <Switch
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dc2sd" />

            <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#666666" android:layout_marginBottom="10dp" android:layout_marginTop="10dp" android:contentDescription="@string/separator"/>

            <Switch
                android:id="@+id/switch4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xdata" />

            <ImageView
                android:id="@+id/ImageView04"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#666666" android:layout_marginBottom="10dp" android:layout_marginTop="10dp" android:contentDescription="@string/separator"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/format_ext" />
			
            <ImageView
                android:id="@+id/ImageView08"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#666666" android:layout_marginBottom="10dp" android:layout_marginTop="10dp" android:contentDescription="@string/separator"/>
            
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:columnOrderPreserved="true" >

                <TextView
                    android:id="@+id/TextViewA1"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:text="@string/sdreadhead"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_row="0" />
            </GridLayout>

            <ImageView
                android:id="@+id/ImageView07"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#666666" android:contentDescription="@string/separator"/>

            <Switch
                android:id="@+id/switch5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swap" />

            <ImageView
                android:id="@+id/ImageView06"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#666666" android:contentDescription="@string/separator"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:columnOrderPreserved="true" >

                <TextView
                    android:id="@+id/textViewA3"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="left"
                    android:layout_row="0"
                    android:text="@string/swappy"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/EditTextA2"
                    android:layout_width="61dp"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_row="0"
                    android:ems="10"
                    android:inputType="number" />
            </GridLayout>

            <ImageView
                android:id="@+id/ImageView05"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#666666" android:contentDescription="@string/separator"/>

        </LinearLayout>
        </ScrollView>