<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/scroll"
		    android:layout_width="fill_parent"
		    android:layout_height="match_parent" android:isScrollContainer="true" android:fillViewport="true" android:layout_margin="20dp">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touchscreen"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#666666" android:contentDescription="@string/separator"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:columnCount="2"
                android:columnOrderPreserved="true" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_column="0"
                    android:layout_gravity="left"
                    android:layout_row="0"
                    android:text="@string/sens"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="61dp"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_row="0"
                    android:ems="10"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>
            </GridLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#666666" 
                android:contentDescription="@string/separator"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:columnCount="2"
                android:columnOrderPreserved="true" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_column="0"
                    android:layout_gravity="left"
                    android:layout_row="0"
                    android:text="@string/noise"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/EditText01"
                    android:layout_width="61dp"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_row="0"
                    android:ems="10"
                    android:inputType="number" />
            </GridLayout>

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#666666" 
                android:contentDescription="@string/separator"/>

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/softk"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#666666" 
                android:contentDescription="@string/separator"/>

            <Switch
                android:id="@+id/switch01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/hf"
                android:textColor="#aaa"
                android:textSize="13dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/ImageView04"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#666666" 
                android:contentDescription="@string/separator"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:columnCount="2"
                android:columnOrderPreserved="true" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="left"
                    android:layout_row="0"
                    android:text="@string/vibtime"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/EditText02"
                    android:layout_width="61dp"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_row="0"
                    android:ems="10"
                    android:inputType="number" />
            </GridLayout>

            <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#666666" 
                android:contentDescription="@string/separator"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:columnCount="2"
                android:columnOrderPreserved="true" >

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_column="0"
                    android:layout_gravity="left"
                    android:layout_row="0"
                    android:text="@string/sens"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/EditText03"
                    android:layout_width="61dp"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_row="0"
                    android:ems="10"
                    android:inputType="number" />
            </GridLayout>

            <ImageView
                android:id="@+id/ImageView05"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#666666" 
                android:contentDescription="@string/separator"/>

        </LinearLayout>
</ScrollView>